add-item-requests-and-gateway V1.4